--- a/platformio.ini
+++ b/platformio.ini
@@ -13,3 +13,5 @@ platform = nordicnrf52
 board = adafruit_feather_nrf52840
 framework = arduino
 lib_deps = bblanchon/ArduinoJson@^6.21.5
+
+monitor_speed = 115200
