need to get enroll signal from app

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,6 +12,7 @@
 platform = nordicnrf52
 board = adafruit_feather_nrf52840
 framework = arduino
-lib_deps = bblanchon/ArduinoJson@^6.21.5
-
+lib_deps = 
+	bblanchon/ArduinoJson@^6.21.5
+	adafruit/Adafruit Fingerprint Sensor Library@^2.1.2
 monitor_speed = 115200
